# my-kernel-templates

./: .gitignore  LICENSE  README.md
LeetGPU solutions/CUDA/: 1d_convolution.cu  2d_conv.cu  color_invertion.cu  dot_production.cu  gemm.cu  histogramming.cu  leaky_relu.cu  mat_copy.cu  mat_mul.cu  mat_trans.cu  monte_carlo_integration.cu  online_softmax_hopper.cu  prefix_sum.cu  rainbow_table.cu  reduction.cu  relu.cu  reverse_array.cu  softmax.cu  softmax_attention.cu  sorting_bitonic.cu  sparse_mat_dense_vec.cu  vector_add.cu
additional/: SpMM.cu
cuda-cpp-guide/: 2D-add.cu  matrix-add-block.cu  pair-wise-addition.cu
flash-attention/: README.md  flash_attention.py  flash_attention2.py  flash_attention3.py  flashattention_optimized_benchmark_20250607_165123.csv  flashattention_optimized_benchmark_20250607_191845.csv  flashattention_optimized_benchmark_20250607_231703.csv  flashattention_optimized_benchmark_20250720_120317.csv  flashattention_quick_benchmark_20250606_204730.csv  pyproject.toml
flash-attention/tests/: adapters.py  test_attention_v1.py  test_attention_v3.py  test_trtion_full.py
flash-attention/utils/: benchmark.py  leaderboard.py  run_benchmark.py
triton-puzzles/: 2D_conv.py  constant_add.py  constant_add_block.py  fused_outer_mul.py  fused_outer_mul_backward.py  long_softmax.py  long_sum.py  matmul.py  outer_vector_add.py  outer_vector_add_block.py  quant_maxmul.py  simple_flash_attention.py
