[project]
name = "cs336-systems"
version = "1.0.4"
description = "CS336 Assignment 2 - Systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops", # Used in test_attention.py for einsum operations
    "numpy",
    "pytest>=8",
    "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
    "triton; sys_platform == 'linux'", # Only needed on Linux for CUDA
    "pandas>=2.3.0",
]

[tool.setuptools.packages.find]
include = ["tests"]

[tool.uv]
package = true
python-preference = "managed"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"

[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]
